modified:   _posts/2024-01-22-Prompt.md

--- a/_posts/2024-01-22-Prompt.md
+++ b/_posts/2024-01-22-Prompt.md
@@ -1,11 +1,12 @@
+--- 
 
-
----
 layout: post
 title:  "Ինչ է prompt-ը, դրա տեսակները"
 categories: [ Jekyll, tutorial ]
 image: assets/images/1.jpg.jpg
+author: Monica
 ---
+
 **Ինչ է Prompt-ը**
 Prompt-ը LLM-ին  ուղղված հրահանգ է։Օրինակ ChatGPT-ի հետ շբվելիս օգտագործում ենք prompt-ներ (հուշումներ):Ճշգրիտ հուշումը  վերադարձնում է համապատասխան ձևով և բովանդակությամբ պատասխան։Օրինակներ․
 1․Ասա մի անեկդոտ [ձեր թեման] մասին։
