modified:   _posts/2024-01-22-Prompt.md

--- a/_posts/2024-01-22-Prompt.md
+++ b/_posts/2024-01-22-Prompt.md
@@ -2,8 +2,7 @@
 
 layout: post
 title:  "Ինչ է prompt-ը, դրա տեսակները"
-categories: [ Jekyll, tutorial ]
-image: assets/images/1.jpg.jpg
+image: assets/images/1.jpg
 author: Monica
 ---
 
