modified:   _posts/2024-01-22-Prompt.md

--- a/_posts/2024-01-22-Prompt.md
+++ b/_posts/2024-01-22-Prompt.md
@@ -2,7 +2,7 @@
 
 layout: post
 title:  "Ինչ է prompt-ը, դրա տեսակները"
-image: assets/images/1.jpg
+image: ![image](../assets/images/1.jpg)
 author: Monica
 ---
 
@@ -26,13 +26,13 @@ LLM-ների հետազոտողները և user-ները հայտնաբերել 
 Prompt hacking-ը տերմին է որը օգտագործվում է նկարագրելու հարձակման մի տեսակ, որն օգտագործվում է  LLM-ների խոցելիությունը՝ շահարկելով նրանց մուտքերը(inputs) կամ  հուշումները(prompts)։Ի տարբերություն ավանդական հաքերային հարձակման, որը սովորաբար օգտագործում է ծրագրային ապահովման խոցելիությունը, prompt hacking-ը հիմնված է զգուշորեն մշակված հուծումների վրա՝ LLM-ներին չնախատեսված գործողություններ կատարել դրդելու համար։
 Կան prompt hacking-ի 3 տեսակներ՝ *Prompt injection,Prompt leaking և Jailbreaking*:
 **Prompt injection**-ը ներառում է վնասակար կամ չնախատեսված բովանդակության ավելացում՝ լեզվական մոդելի output-ներից “առևանգելու” անհրաժեշտ տեղեկատվություն։
-![Injection example ](http://assets/images/haching.png)
+![Injection example ](../assets/images/haching.png)
 
 **Prompt leaking**-ը  LLM-ի  output-ներից զգայուն կամ գաղտնի ինֆորմացիայի դուրսբերումն է։
-![Leaking example ](http://assets/images/leaking.png)
+![Leaking example ](../assets/images/leaking.png)
 
 **Jailbreaking**-ը արտադրողի կողմից սահմանված սահմանափակումների փոփոխումն է,ներառում է անվտանգության չափանիշների շրջանցում,օրինակ՝ թույլ տալ չթույլատրված ծրագրակազմի տեղադրումը։
-![Jailberaking example ](http://assets/images/jailbrekaing.png)
+![Jailberaking example ](../assets/images/jailbreaking.png)
 
 Prompt hacking-ից պաշտպանվելու համար պետք է պաշտմանական միջոցներ ձեռնարկվեն,որոնք ներառում են հատուկ պաշտպանական տեխնիկայի կիրառում,  LLM-ի վարքագծի և output-ների կանոնավոր մոնիթորինգ` հայտնաբերելու համար անսովոր գործունեությունը։
 
